--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ehab-emad/json-server.git"
+    "url": "https://github.com/ehab-emad/ssjs.git"
   },
   "keywords": [],
   "author": "",
