--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+ "scripts": {
+  "start": "json-server --watch db.json --port 30001"
+},
   "repository": {
     "type": "git",
     "url": "https://github.com/ehab-emad/ssjs.git"
