--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
     "start": "node index.js"
   },
   "repository": {
@@ -16,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-   
-    "json-server": "^0.17.0",
+    "mongoose": "^8.6.1",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.2"
   }
 }
