--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "mongoose": "^8.6.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "json-server": "^0.17.0"
   },
   "devDependencies": {
-    "json-server": "^1.0.0-beta.2"
+   
   }
 }
