--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "json-server": "^0.17.0",
     "mongoose": "^8.6.1",
-    "multer": "^1.4.5-lts.1",
-    "json-server": "^0.17.0"
-  },
-  "devDependencies": {
-   
+    "multer": "^1.4.5-lts.1"
   }
 }
